@@ -1,5 +1,8 @@
 MComix 0.99
 
+    - Fixed "Go to page" dialog's thumbnail not scaling depending on dialog
+      size.
+
     - Zoom is now enabled in all fit modes (best fit, fit to width, fit to
       height).
 
